Updated alignment issue header.css

--- a/Project/css/header.css
+++ b/Project/css/header.css
@@ -18,7 +18,7 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    margin-top: 30px;
+    margin-top: 25px;
 }
 
 .nav-bar {
